# TelegramOCR

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  extract_schedule_ocr.py  main.py  ocr_raw.json  ocr_rows.json  pyproject.toml  read_ocr_rows.py
database/: schema.md
domain/: notification_rules.py  schedule_diff.py  session_aggregate.py  session_lifecycle.py
fixtures/: sample_schedule.json
infra/: __init__.py  event_store.py  notification_store.py
ocr/: __init__.py  paddle_adapter.py
parser/: __init__.py  entity_identity.py  layout_parser.py  semantic_normalizer.py
tests/: test_entity_identity.py  test_event_store.py  test_integration_claim_locking.py  test_integration_fixture_versioning.py  test_layout_parser.py  test_local_backfill_runner.py  test_main_phase2.py  test_main_worker.py  test_notification_rules.py  test_notification_store.py  test_ocr_golden_samples.py  test_paddle_adapter.py  test_run_forever.py  test_schedule_diff.py  (+3 more)
tools/local_backfill_runner/: README.md  __init__.py  backfill_runner.py  pyproject.toml
tools/local_backfill_runner/local_backfill_runner/: backfill_runner.py
tools/local_backfill_runner/local_backfill_runner/domain/: schedule_diff.py  session_aggregate.py
tools/local_backfill_runner/local_backfill_runner/infra/: event_store.py  notification_store.py
tools/local_backfill_runner/local_backfill_runner/ocr/: paddle_adapter.py
tools/local_backfill_runner/local_backfill_runner/parser/: semantic_normalizer.py
tools/local_backfill_runner/local_backfill_runner/runtime/: date_resolution.py
(+7 files in other folders)
