[project]
name = "local-backfill-runner"
version = "0.1.0"
description = "Standalone OCR backfill runner for schedule sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "numpy>=1.26.0",
  "paddleocr>=3.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
local-backfill-runner = "local_backfill_runner.backfill_runner:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_backfill_runner"]

[tool.uv]
package = true
